--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,7 +5,7 @@
 
     {% capture meta_title %}
       {% if product %}
-        {% assign cat = product.categories[0] %} 
+        {% assign cat = product.categories[0] %}
         {{ shop.main_page_title }} - {% if cat %}{{ cat.name }} - {% endif %} {{ product.name }}
       {% else %}
         {% if current_category %}
@@ -18,39 +18,36 @@
           {% endif %}
         {% endif %}
       {% endif %}
-    {% endcapture %}    
-    
+    {% endcapture %}
+
     <meta charset="utf-8" />
     <title>{{ meta_title | strip_newlines | strip_html }}</title>
 
     <!-- Ombu Shop - Theme: Minimost -->
 
-    {{ 'reset.css' | stylesheet_tag }}
-    {{ 'basic.css' | stylesheet_tag }}
-    {{ 'buttons.css' | stylesheet_tag }}
-    {{ 'advice.css' | stylesheet_tag }}
-    
-    <!-- Typography -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css' />
+    <link href='/themes/minimost/stylesheets/reset.css' rel='stylesheet' type='text/css' />
+    <link href='/themes/minimost/stylesheets/basic.css' rel='stylesheet' type='text/css' />
+    <link href='/themes/minimost/stylesheets/buttons.css' rel='stylesheet' type='text/css' />
+    <link href='/themes/minimost/stylesheets/advice.css' rel='stylesheet' type='text/css' />
 
     {{ 'shop.css' | asset_url | stylesheet_tag }}
     {{ 'products.css' | asset_url | stylesheet_tag }}
 
-    {{ 'logo.css' | stylesheet_tag }}
+    <link href='/themes/minimost/stylesheets/logo.css' rel='stylesheet' type='text/css' />
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-    {{ 'jquery.validate.min' | script_tag }}
-    {{ 'rails' | script_tag }}
-    {{ 'application' | script_tag }}
+    <script src='/themes/minimost/javascripts/jquery-1.4.2.min.js' type='text/javascript'></script>
+    <script src='/themes/minimost/javascripts/jquery.validate.min.js' type='text/javascript'></script>
+    <script src='/themes/minimost/javascripts/rails.js' type='text/javascript'></script>
+    <script src='/themes/minimost/javascripts/application.js' type='text/javascript'></script>
 
     <!-- CloudZoom: CSS and JS -->
-    <script src='/assets/cloud-zoom/cloud-zoom.1.0.2.min.js' type='text/javascript'></script> 
+    <script src='/themes/minimost/javascripts/cloud-zoom.1.0.2.min.js' type='text/javascript'></script>
 
     <!-- jQuery Masonry -->
-    <script src='/assets/themes/minimost/javascripts/jquery.masonry.min.js' type='text/javascript'></script> 
-    <script src='/assets/themes/minimost/javascripts/jquery.imagesloaded.min.js' type='text/javascript'></script> 
+    <script src='/themes/minimost/javascripts/jquery.masonry.min.js' type='text/javascript'></script>
+    <script src='/themes/minimost/javascripts/jquery.imagesloaded.min.js' type='text/javascript'></script>
 
-    {{ 'product' | script_tag }}
+    <script src='/themes/minimost/javascripts/product.js' type='text/javascript'></script>
 
     {{ content_for_header }}
 
@@ -64,7 +61,7 @@
         });
       });
     </script>
-    
+
     {% if product %}
     <!-- metatags para facebook -->
     <meta property="og:title" content="{{ shop.main_page_title }} - {{ product.name }}" />
@@ -74,7 +71,7 @@
     <meta property="og:site_name" content="{{ shop.main_page_title }}" />
     <meta property="fb:app_id" content="148526658594891" />
     <!-- fin metatags para facebook -->
-    {% endif %}    
+    {% endif %}
 
   </head>
 
@@ -87,7 +84,7 @@
       js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
-     
+
     <div id="all">
 
       {% if current_user %}
@@ -126,9 +123,9 @@
                 <a href="/cart" class="full" title="Cart">Carrito: {{ current_order.item_count }}</a>
               {% endif %}
             </li>
-          </ul>     
+          </ul>
           <div id="search_bar">
-            <form accept-charset="UTF-8" 
+            <form accept-charset="UTF-8"
                   action="/products" method="get">
                 <div style="margin:0;padding:0;display:inline">
                   <input name="utf8" type="hidden" value="✓">
@@ -137,10 +134,10 @@
                 <input id="keywords" name="keywords" type="text" value="{{ keywords }}">
                 <input type="submit" value="Buscar">
             </form>
-          </div>  
+          </div>
 
           <!-- page navigation -->
-          <ul id="navigation_bar"> 
+          <ul id="navigation_bar">
             {% if shop.homepage %}
             <li><a href="/products">Productos</a></li>
             {% endif %}
@@ -149,7 +146,7 @@
             {% endfor %}
           </ul>
           <!-- end page navigation -->
-          
+
         </div><!-- end "header" -->
 
         <div id="wrapper" class="container">
